# project_doom

./: .gitignore  imp_repos.txt
backend/: pyproject.toml
backend/authentication/: models.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_customuser_email.py
backend/core/: settings.py
