[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "rg",email = "gargrohan138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-allauth (>=65.8.1,<66.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
