[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "rg",email = "gargrohan138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-allauth (>=65.8.1,<66.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
